--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Scribbly",
+  "name": "Helper AI",
   "version": "1.0",
   "description": "Use OpenAI's GPT-4 to generate text, translate languages, and write code on any website.",
-  "permissions": [
-    "storage",
-    "tabs",
-    "activeTab"
-  ],
+  "permissions": ["storage"],
   "action": {
     "default_icon": "icon48.png",
     "default_popup": "popup.html"
